fixed playlist items with long titles overlapping, closes #446

--- a/res/bootstrap3/less/cherrymusic.less
+++ b/res/bootstrap3/less/cherrymusic.less
@@ -159,7 +159,7 @@ body:after{
             list-style-type: none;
             margin: 5px 0;
             padding: 0 5px;
-            height: @playlist-item-height;
+            min-height: @playlist-item-height;
         }
     }
     
